Fix : align in center

--- a/react-app/src/styles/storage.css
+++ b/react-app/src/styles/storage.css
@@ -19,6 +19,12 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.letter_box{
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .container_grid {
   position: relative;
   display: grid;
